<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="@dimen/dimen_tips_margin_top"
            android:gravity="center_horizontal"
            android:text="@string/tip_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_settings_about_dialog_title_size"
            app:fontFamily="@font/righteous"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tip_purify_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_tips_text_size"
            app:fontFamily="@font/rubik"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <ImageView
            android:id="@+id/icon"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_tips_icon_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_name"
            android:layout_marginVertical="20dp"
            app:srcCompat="@drawable/icon_fog"
            />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_tips_text_size"
            android:paddingHorizontal="@dimen/dimen_tips_text_padding_horizontal"
            android:text="@string/tip_purify_text1"
            app:fontFamily="@font/rubik"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/dimen_tips_margin_horizontal"
            android:layout_marginTop="26dp"
            />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_tips_text_size"
            android:paddingHorizontal="@dimen/dimen_tips_text_padding_horizontal"
            android:text="@string/tip_purify_text2"
            app:fontFamily="@font/rubik"
            app:layout_constraintTop_toBottomOf="@id/text_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/dimen_tips_margin_horizontal"
            android:layout_marginTop="@dimen/dimen_tips_margin_in_between_texts"
            />

        <TextView
            android:id="@+id/text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_tips_text_size"
            android:paddingHorizontal="@dimen/dimen_tips_text_padding_horizontal"
            android:text="@string/tip_purify_text3"
            app:fontFamily="@font/rubik"
            app:layout_constraintTop_toBottomOf="@id/text_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/dimen_tips_margin_horizontal"
            android:layout_marginTop="@dimen/dimen_tips_margin_in_between_texts"
            />

        <TextView
            android:id="@+id/text_unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/dimen_tips_unlock_text_size"
            android:text="@string/tip_unlock_text"
            app:fontFamily="@font/rubik"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/text_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/dimen_tips_margin_horizontal"
            android:layout_marginTop="@dimen/dimen_tips_unlock_margin_top"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonDislike"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_settings_dialog_accept_button_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_unlock"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonLike"
            android:background="@drawable/new_plant_cancelbutton"
            android:layout_marginStart="@dimen/dimen_settings_dialog_accept_button_margin"
            android:layout_marginEnd="@dimen/dimen_tips_button_middle_margin"
            android:layout_marginBottom="@dimen/dimen_settings_dialog_accept_button_margin"
            android:layout_marginTop="@dimen/dimen_tips_margin_button_top"
            style="?android:attr/borderlessButtonStyle"
            android:paddingEnd="10dp"
            >

            <ImageView
                android:id="@+id/buttonDislikeIcon"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/dimen_tips_icon_inside_button_size"
                android:layout_height="@dimen/dimen_tips_icon_inside_button_size"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonDislikeText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="6dp"
                app:srcCompat="@drawable/icon_thumb_down_red"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/buttonDislikeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_button_dislike"
                android:textAllCaps="false"
                android:textColor="@color/colorRed"
                app:fontFamily="@font/rubik"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonDislikeIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonLike"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_settings_dialog_accept_button_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_unlock"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonDislike"
            android:background="@drawable/new_plant_acceptbutton"
            android:layout_marginEnd="@dimen/dimen_settings_dialog_accept_button_margin"
            android:layout_marginStart="@dimen/dimen_tips_button_middle_margin"
            android:layout_marginBottom="@dimen/dimen_settings_dialog_accept_button_margin"
            android:layout_marginTop="@dimen/dimen_tips_margin_button_top"
            android:paddingEnd="10dp"
            style="?android:attr/borderlessButtonStyle">

            <ImageView
                android:id="@+id/buttonLikeIcon"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/dimen_tips_icon_inside_button_size"
                android:layout_height="@dimen/dimen_tips_icon_inside_button_size"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonLikeText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="4dp"
                app:srcCompat="@drawable/icon_thumb_up"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/buttonLikeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_button"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:fontFamily="@font/rubik"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonLikeIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>